[package]
name = "cs377_filesystem"
version = "0.1.0"
edition = "2021"
author = "Jack Champagne"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "fs_app"
path = "src/main.rs"

[[bin]]
name = "create_fs"
path = "src/create_fs.rs"